<resources>
    <string name="app_name">Restaurant Manager</string>
    <string name="google_client_id">GOOGLE_CLIENT_ID</string>
    <string name="github_client_id">GITHUB_CLIENT_ID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quantity_order">%s order item</string>
    <string name="price">$%,.2f</string>
    <string name="table_not_order">Table Not Ordered</string>
    <string name="not_order_message">Table not ordered yet. Please select a table that is already ordered.</string>

    <string name="update_order_status">Update order status</string>
    <string name="confirm_update_order_status">Do you want to update the status of this order?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="seats">%d seats</string>
    <string name="capacity">%d capacity</string>


    <string name="order_management">Order Management</string>
    <string name="search_orders">Search Orders</string>
    <string name="filter_orders">Filter Orders</string>
    <string name="no_orders">No Orders</string>
    <string name="no_orders_found">No orders found</string>
    <string name="add_new_order">Add New Order</string>
    <string name="view_details">View Details</string>
    <string name="update_status">Update Status</string>
    <string name="total_amount">$ %.2f</string>

    <string name="table_number">Table %d</string>
    <string name="login_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="have_account">Have an account?</string>
    <string name="or_sign_in_email">or sign in with email</string>
    <string name="remember_me">Remember me</string>
    <string name="welcome">Welcome back</string>
    <string name="text_sign_in">Sign in to your account to continue</string>
    <string name="text_sign_up">Sign up to your account to continue</string>
    <string name="r">R</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="text_input_email">your.email@example.com</string>
    <string name="text_input_password">Enter your password</string>
    <string name="text_input_name">Enter your name</string>
    <string name="text_input_phone">Enter your phone</string>
    <string name="text_input_address">Enter your address</string>
    <string name="text_create_layout">Create your account</string>
    <string name="must_be_least">Must be at least 8 characters</string>
    <string name="does_not_contain">Does not contain your email address</string>
    <string name="choose_location">Please choose your location</string>
    <string name="GOOGLE_API_KEY_VALUE">AIzaSyBnab4M36hq9P2_qX3CF9V2iJh6eKQHDRQ</string>
    <string name="ADMOD_APP_ID">ca-app-pub-1809276120261084~6061491791</string>
    <string name="ADMOD_AD_UNIT_ID">ca-app-pub-1809276120261084/9598483952</string>
    <string name="Interstitial_AD_UNIT_ID">ca-app-pub-1809276120261084/8883635252</string>


    <string name="choose_locations">Choose location</string>
    <string name="pick_location">Pick Location</string>
    <string name="search_location">Search location</string>
    <string name="selected_address">Selected Address:</string>
    <string name="no_address_selected">No address selected yet</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="please_select_location">Please select a location first</string>
    <string name="location_not_found">Location not found</string>
    <string name="search_error">Search error: </string>
    <string name="address_not_found">Address not found</string>
    <string name="error_fetching_address">Error fetching address</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="map_type">Map Type</string>
    <string name="normal_map">Normal</string>
    <string name="satellite_map">Satellite</string>
    <string name="terrain_map">Terrain</string>
    <string name="hybrid_map">Hybrid</string>
    <string name="manager">MANAGER</string>
    <string name="employee">EMPLOYEE</string>
    <string name="admin">ADMIN</string>
    <string name="all">ALL</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="system_settings">System settings</string>
    <string name="restaurant_icon">Restaurant Icon</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="contact_email">Contact Email</string>
    <string name="save_changes">Save Changes</string>
    <string name="system_setting">System Settings</string>
    <string name="admin_settings">Admin Settings</string>
    <string name="send_order_notifications">Send order notifications</string>
    <string name="send_payment_notifications">Send payment notifications</string>
    <string name="send_reservation_notifications">Send reservation notifications</string>
    <string name="allow_table_reservations">Allow table reservations</string>
    <string name="enable_drak_mode">Enable drak mode</string>
    <string name="default_reservation_time_minutes">Default reservation time(minutes)</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="email_notifications">Email Notifications</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="sms_notification">SMS Notification</string>
    <string name="notification_email">Notification Email</string>
    <string name="paymentmethod_settings">PaymentMethod Settings</string>
    <string name="cash_payement">Cash Payement</string>
    <string name="allow_cash_payment">Allow cash payment</string>
    <string name="card_payment">Card Payment</string>
    <string name="allow_card_payment">Allow card payment</string>
    <string name="online_payment">Online Payment</string>
    <string name="allow_online_payment">Allow online payment</string>
    <string name="vat">VAT (%)</string>
    <string name="restaurant_notifications">Restaurant Notifications</string>
    <string name="notifications_for_restaurant_management">Notifications for restaurant management</string>
</resources>